# factorio-ai-agent

./: .gitignore  Makefile  README.md  program.md  pyproject.toml
docs/: autoresearch-handoff.md  milestones.md  project-vision.md
src/factorio_ai_agent/: __init__.py  cli.py  evaluation.py  tasks.py
src/factorio_ai_agent/agents/: random_agent.py  scripted_burner_agent.py
src/factorio_ai_agent/envs/: __init__.py  mock_factorio_env.py  numeric_observation_wrapper.py
src/factorio_ai_agent/factorio/: __init__.py  api_client.py
src/factorio_ai_agent/research/: __init__.py  benchmark.py
src/factorio_ai_agent/training/: reward_wrappers.py  train_ppo.py
tests/: test_cli.py  test_evaluation.py  test_mock_env.py  test_numeric_observation_wrapper.py  test_research_benchmark.py  test_reward_wrappers.py  test_scripted_agent.py  test_tasks.py  test_train_ppo.py
