[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "factorio-ai-agent"
version = "0.1.0"
description = "Prototype AI agent framework for Factorio-like tasks."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "factorio-ai-agent contributors" }]
dependencies = [
    "gymnasium>=0.29,<1.1",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
rl = [
    "sb3-contrib>=2.3",
    "stable-baselines3>=2.3",
]

[project.scripts]
factorio-ai = "factorio_ai_agent.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/factorio_ai_agent"]
